Cleaned up file structure and added select file for newceleb mode

--- a/MyCookieClicker/classic.html
+++ b/MyCookieClicker/classic.html
@@ -11,14 +11,12 @@
 </head>
 <body>
         <nav>
-            <ul class="nav-list">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="#">Temp</a></li>
-                <li><a href="#">Temp</a></li>
-                <li><a href="#">Temp</a></li>
-                <li><a href="#">Temp</a></li>
-                <li><a href="#">Temp</a></li>
-            </ul>
+        <ul class="nav-list">
+            <li class="active"><a href="classic.html">Classic</a></li>
+            <!--<li><a href="#">Timed</a></li>-->
+            <li><a href="competitive.html">Competitive</a></li>
+            <li><a href="NewCreature.html">New Creature</a></li>
+        </ul>
         </nav>
     <h1>Coconut Clicker!</h1>
     <br>
