--- a/MyCookieClicker/competitive.html
+++ b/MyCookieClicker/competitive.html
@@ -31,6 +31,10 @@
         <h4>Player 2 Score:</h4>
         <div id="comp2ScoreDisplay"></div>
     </div>
+
+    <h2>Competitive Mode</h2>
+    <h1>Player 1: Press A to score</h1>
+    <h1>Player 2: Press L to score</h1>
 </body>
 
 </html>
